samples/_failures_safe/1761260889_ea6160_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_443b933e.c: In function ‘main’:
./samples/SAFE/__tmp_443b933e.c:143:24: error: missing terminating " character
  143 |                 printf("Verification: FAIL\n
      |                        ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_443b933e.c:143:17: error: expected expression at end of input
  143 |                 printf("Verification: FAIL\n
      |                 ^~~~~~
./samples/SAFE/__tmp_443b933e.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_443b933e.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_443b933e.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_443b933e.c:143:17: error: expected declaration or statement at end of input
